add auth functionality

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ POSTGRES_HOST=db
 POSTGRES_PORT=5432
 DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
-DB_NAME=task_suggestion
+DATABASE_NAME=task_suggestion
 JWT_SECRET=anyKey
 APP_EXPIRES=3600
 PGADMIN_DEFAULT_EMAIL=postgres@mail.com
