--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_TYPE=postgres
-POSTGRES_HOST=db
+POSTGRES_HOST="dpg-ch1bcfpmbg5847f1443g-a.oregon-postgres.render.com"
 POSTGRES_PORT=5432
-DATABASE_USER=postgres
-DATABASE_PASSWORD=postgres
+DATABASE_USER=chukwutosin
+DATABASE_PASSWORD=6IHf21VJKQklvVraT48BBhcbITNW2NeK
 DATABASE_NAME=task_suggestion
 JWT_SECRET=anyKey
 APP_EXPIRES=3600
