--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
   "dependencies": {
     "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/class-validator": "^0.13.4",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^10.0.3",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/common": "^10.1.3",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.1.3",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/mapped-types": "^2.0.2",
+    "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/platform-express": "^10.1.3",
+    "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.1",
     "pg": "^8.10.0",
     "postgres": "^3.3.4",
     "reflect-metadata": "^0.1.13",
@@ -44,9 +48,9 @@
     "typeorm": "^0.3.13"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/cli": "^10.1.11",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.1.3",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
