--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.1.3",
+    "@nestjs/schedule": "^3.0.2",
     "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
@@ -52,6 +53,7 @@
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.1.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/cron": "^2.4.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
