--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "bcrypt": "^5.1.0",
     "bull": "^4.11.3",
     "class-validator": "^0.14.0",
+    "form-data": "^4.0.0",
+    "mailgun.js": "^9.2.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
     "pg": "^8.10.0",
@@ -57,6 +61,7 @@
     "@types/cron": "^2.4.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
